--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-post-list-component  [posts]="Posts"></app-post-list-component>
+
+<app-header></app-header>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
